fix(components-Card): fix card spacing styles (#1255)
* fix(components-Card): fix card spacing styles

* test: update snapshots

--- a/components/Card/Card.css
+++ b/components/Card/Card.css
@@ -6,3 +6,8 @@
 .ant-card-meta-description {
   @apply dark:text-gray-50/50;
 }
+
+/* Add padding to card title */
+.ant-card-head-title {
+  @apply py-3;
+}
